Increased maximum character limit for FP10 to 38. Reworked dimensions of prescription list and prescriber field to accommodate changes. Reverted unit test assertion changes. Fixed issue where having a split-print item at the end of an item list would cause the split part to be cut off and not printed.

--- a/protected/modules/OphDrPrescription/assets/css/fpten.css
+++ b/protected/modules/OphDrPrescription/assets/css/fpten.css
@@ -156,8 +156,8 @@ body {
 /*Prescriber initiative appears at top of main box in the center*/
 .fpten-prescriber {
     height: 10mm;
-    width: 59mm;
-    margin-left: 25mm;
+    width: 63mm;
+    margin-left: 21mm;
     text-align: center;
     font-size: 8pt;
     line-height: 10mm;
@@ -195,8 +195,8 @@ body {
 
 .fpten-prescription-list {
     height: 78mm;
-    width: 59mm;
-    margin-left: 25mm;
+    width: 63mm;
+    margin-left: 21mm;
 }
 
 .right .fpten-prescription-list, .right .wpten-prescription-list {
